WIP: Creation static homepage

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,11 @@
-#container {
-  text-align: center;
+ion-content {
+  --background: #f0f4fd;
 
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
-
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+  p{
+    font-size: 16PX;
+    line-height: 22PX;
+    font-weight: 300;
+    margin: 0;
+    color: #8C8C8C;
+  }
 }
