--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,7 +10,7 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-card *ngFor="let item of todoList" class="ion-margin">
+  <ion-card *ngFor="let item of todoList; let i = index" class="ion-margin">
     <ion-card-header>
       <ion-card-subtitle
         [style.color]="item.itemPriority === 'high' ? 'red' : (item.itemPriority === 'low' ? 'green' : 'orange')"
@@ -51,14 +51,14 @@
         <ion-icon name="checkmark-outline"></ion-icon>
         <p>Complete</p>
       </ion-item>
-      <ion-item>
+      <ion-item (click)="delete(i)">
         <ion-icon name="trash-outline"></ion-icon>
         <p>Cancel</p>
       </ion-item>
     </ion-row>
   </ion-card>
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button>
+    <ion-fab-button (click)="addTask()">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
