WIP: Basic CRUD functionality added

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -13,45 +13,45 @@
   <ion-card *ngFor="let item of todoList; let i = index" class="ion-margin">
     <ion-card-header>
       <ion-card-subtitle
-        [style.color]="item.itemPriority === 'high' ? 'red' : (item.itemPriority === 'low' ? 'green' : 'orange')"
+        [style.color]="item.value.itemPriority === 'high' ? 'red' : (item.value.itemPriority === 'low' ? 'green' : 'orange')"
       >
-        {{item.itemCategory}}
+        {{item.value.itemCategory}}
       </ion-card-subtitle>
       <ion-item>
         <ion-icon
-          *ngIf="item.itemPriority === 'high' "
+          *ngIf="item.value.itemPriority === 'high' "
           color="danger"
           size="small"
           name="ellipse"
         ></ion-icon>
         <ion-icon
-          *ngIf="item.itemPriority === 'medium' "
+          *ngIf="item.value.itemPriority === 'medium' "
           color="warning"
           size="small"
           name="ellipse"
         ></ion-icon>
         <ion-icon
-          *ngIf="item.itemPriority === 'low' "
+          *ngIf="item.value.itemPriority === 'low' "
           color="success"
           size="small"
           name="ellipse"
         ></ion-icon>
-        <ion-label>{{item.itemName}}</ion-label>
+        <ion-label>{{item.value.itemName}}</ion-label>
       </ion-item>
     </ion-card-header>
     <ion-card-content>
-      <ion-label> Due {{item.itemDueDate | date: 'fullDate'}} </ion-label>
+      <ion-label> Due {{item.value.itemDueDate | date: 'fullDate'}} </ion-label>
     </ion-card-content>
     <ion-row>
       <ion-item>
         <ion-icon name="share-outline"></ion-icon>
         <p>Share</p>
       </ion-item>
-      <ion-item>
-        <ion-icon name="checkmark-outline"></ion-icon>
-        <p>Complete</p>
+      <ion-item (click)="update(item)">
+        <ion-icon name="checkmark-done-outline"></ion-icon>
+        <p>Update</p>
       </ion-item>
-      <ion-item (click)="delete(i)">
+      <ion-item (click)="delete(item.key)">
         <ion-icon name="trash-outline"></ion-icon>
         <p>Cancel</p>
       </ion-item>
