--- a/src/app/update-task/update-task.page.html
+++ b/src/app/update-task/update-task.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Add New Task</ion-title>
+    <ion-title>Update Task</ion-title>
     <ion-icon
       name="close"
       slot="end"
@@ -48,7 +48,7 @@
         <ion-label>{{category}}</ion-label>
       </ion-chip>
     </ion-item>
-    <ion-button class="ion-margin" expand="block" (click)="addTask()"
+    <ion-button class="ion-margin" expand="block" (click)="updateTask()"
       >Add</ion-button
     >
   </ion-card>
