--- a/src/app/add-category/add-category.page.html
+++ b/src/app/add-category/add-category.page.html
@@ -22,8 +22,15 @@
     <ion-button class="ion-margin" expand="block" (click)="addCategory()"
       >Add Category</ion-button
     >
+    <ion-button
+      color="danger"
+      class="ion-margin"
+      expand="block"
+      (click)="deleteCategories()"
+      >Delete All Categories</ion-button
+    >
   </ion-card>
-  <ion-card>
+  <ion-card *ngIf="categories.length > 0">
     <ion-item>
       <ion-list>
         <ion-list-header>Categories</ion-list-header>
@@ -31,11 +38,12 @@
           *ngFor="let item of categories; let i = index"
           (click)="selectCategory(i)"
         >
-          <ion-label>{{item.value.category}}</ion-label>
+          <ion-label>{{item.category}}</ion-label>
           <ion-icon
             class="ion-padding"
             name="close-circle-outline"
             slot="end"
+            (click)="removeCategory(i)"
           ></ion-icon>
         </ion-item>
       </ion-list>
