--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,37 +10,40 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-card *ngFor="let item of todoList; let i = index" class="ion-margin">
+  <ion-card
+    *ngFor="let item of items | async; let i = index"
+    class="ion-margin"
+  >
     <ion-card-header>
       <ion-card-subtitle
-        [style.color]="item.value.itemPriority === 'high' ? 'red' : (item.value.itemPriority === 'low' ? 'green' : 'orange')"
+        [style.color]="item.priority === 'high' ? 'red' : (item.priority === 'low' ? 'green' : 'orange')"
       >
-        {{item.value.itemCategory}}
+        {{item.category}}
       </ion-card-subtitle>
       <ion-item>
         <ion-icon
-          *ngIf="item.value.itemPriority === 'high' "
+          *ngIf="item.priority === 'high' "
           color="danger"
           size="small"
           name="ellipse"
         ></ion-icon>
         <ion-icon
-          *ngIf="item.value.itemPriority === 'medium' "
+          *ngIf="item.priority === 'medium' "
           color="warning"
           size="small"
           name="ellipse"
         ></ion-icon>
         <ion-icon
-          *ngIf="item.value.itemPriority === 'low' "
+          *ngIf="item.priority === 'low' "
           color="success"
           size="small"
           name="ellipse"
         ></ion-icon>
-        <ion-label>{{item.value.itemName}}</ion-label>
+        <ion-label>{{item.task}}</ion-label>
       </ion-item>
     </ion-card-header>
     <ion-card-content>
-      <ion-label> Due {{item.value.itemDueDate | date: 'fullDate'}} </ion-label>
+      <ion-label> Due {{item.due_date | date: 'fullDate'}} </ion-label>
     </ion-card-content>
     <ion-row>
       <ion-item>
@@ -51,7 +54,7 @@
         <ion-icon name="create-outline"></ion-icon>
         <p>Update</p>
       </ion-item>
-      <ion-item (click)="delete(item.key)">
+      <ion-item (click)="delete(item.id)">
         <ion-icon name="trash-outline"></ion-icon>
         <p>Cancel</p>
       </ion-item>
