--- a/src/app/update-task/update-task.page.html
+++ b/src/app/update-task/update-task.page.html
@@ -42,10 +42,10 @@
     </ion-item>
     <ion-item>
       <ion-chip
-        *ngFor="let category of categories; let i = index"
-        (click)="selectCategory(i)"
+        *ngFor="let category of categories | async; let i = index"
+        (click)="selectCategory(category.category)"
       >
-        <ion-label>{{category}}</ion-label>
+        <ion-label>{{category.category}}</ion-label>
       </ion-chip>
     </ion-item>
     <ion-button class="ion-margin" expand="block" (click)="updateTask()"
