--- a/src/app/add-category/add-category.page.html
+++ b/src/app/add-category/add-category.page.html
@@ -34,16 +34,13 @@
     <ion-item>
       <ion-list>
         <ion-list-header>Categories</ion-list-header>
-        <ion-item
-          *ngFor="let item of categories | async; let i = index"
-          (click)="selectCategory(i)"
-        >
+        <ion-item *ngFor="let item of categories | async; let i = index">
           <ion-label>{{item.category}}</ion-label>
           <ion-icon
             class="ion-padding"
             name="close-circle-outline"
             slot="end"
-            (click)="removeCategory(i)"
+            (click)="deleteCategory(item)"
           ></ion-icon>
         </ion-item>
       </ion-list>
